# [profile.release]
# lto="fat"

[package]
name = "ic_hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
wgpu = "0.15.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.2.5"
cfg-if = "1.0.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"

[toolchain.optional]
rust-std = ["x86_64-pc-windows-gnu"]

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
